# unico_pack

./: CMakeLists.txt  README.md  package.xml
config/: arducam_fisheye.yaml  custom_bringup.yaml  custom_bringup_v2.yaml  custom_bringup_v3.yaml  custom_bringup_v4.yaml  custom_bringup_v5.yaml  custom_bringup_v6.yaml  drone_nav.xml  drone_nav_through_poses.xml  mavros_pluginlists.yaml  test.rviz  webcam720.yaml  webcam_param.yaml
launch/: camera_calibration.launch.py  custom_bringup.launch.py  custom_bringup_v2.launch.py  manager_system_bringup.launch.py  master.launch.py  mavros.launch.py  precision_landing.launch.py  precision_landing_sitl.launch.py
maps/: warehouse_2d_map.pgm  warehouse_2d_map.yaml  warehouse_2d_map_v2.pgm
maps/map_v1_20251203/: my_map120302.pgm  my_map120302.yaml
scripts/: fastlio_to_mavros_only_pose.py  lidar_gpio.py  run_copter_lidar_vision.sh
src/: cargo_tracker.py  cmd_vel_bridge.cpp  cmd_vel_bridge.py  fast_lio_lifecycle_wrapper.cpp  fastlio_to_mavros_only_pose.cpp  main copy.py  main.py  manager.py  mission_dispatcher.cpp  mission_dispatcher.py  mission_dispatcher_v2.py  mission_dispatcher_v3.cpp  mission_dispatcher_v4.py  mission_dispatcher_with_tracker.py  mission_dispatcher_with_tracker_v2.py  mqtt_bridge.py  multi_marker_landing.cpp  multi_marker_landing.py  multi_marker_landing_odom.cpp  multi_marker_landing_v2.cpp  multi_marker_landing_v2.py  multi_marker_landing_v3.py  nav_velocity_tracker.cpp  precision_landing_lifecycle.cpp  rosbag_lifecycle.cpp  velocity_controller.cpp
